<resources>
    <string name="app_name">Seg America</string>
    <string name="tutorial">Tutorial</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="back">Regresar</string>
    <string name="title_activity_where_iam">¿Dónde estoy?</string>
    <string name="hello_world">Hello world!</string>
    <string name="latitude">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="opengl_message">Tu dispositivo no soporta OpenGL 2.0.\n\n¿Deseas abrir Google Maps para Android?</string>
    <string name="gmap">Abrir Google Maps</string>
    <string name="my_location">Mi ubicación:</string>
    <string name="sms_result_error_generic_failure">Falla genérica en el envío de SMS\nIntenta más tarde.</string>
    <string name="sms_result_error_no_service">Sin servicio para enviar SMS\nLa red no esta disponible.</string>
    <string name="sms_result_error_null_pdu">Falla PDU en el envío de SMS\nIntenta más tarde.</string>
    <string name="sms_result_error_radio_off">Sin señal para el envío de SMS\nIntenta más tarde.</string>
    <string name="sms_result_delivered_ok">Esperando respuesta del servidor&#8230;</string>
    <string name="sms_result_delivered_canceled">SMS cancelado.</string>
    <string name="sms_message">Enviando mensaje de texto&#8230;</string>
    <string name="phone">1&#8211;800&#8211;9999</string>
    <string name="mobile">8710&#8211;7042 </string>
    <string name="emergency_hone">1&#8211;800&#8211;9999</string>
    <string name="express_hone">2270&#8211;8076</string>
    <string name="insurance_hone">1&#8211;800&#8211;9191</string>
    <string name="title_activity_digital_card">Carné Digital</string>
    <string name="insured">Asegurado:</string>
    <string name="insurance_policy_number">Póliza Número:</string>
    <string name="validity">Vigencia de:</string>
    <string name="expires">Vence:</string>
    <string name="date_format">DD/MM/AAAA</string>
    <string name="name">Nombre</string>
    <string name="policy_number">Número de Póliza:</string>
    <string name="message_sms">Requiero asistencia en esta ubicación:</string>
    <string name="title_activity_digital_card_form">Nuevo Carné Digital</string>
    <string name="title_activity_digital_card_form_edit">Editar Carné Digital</string>
    <string name="delete">Eliminar</string>
    <string name="delete_digital_card_title">¿Desea eliminar su Carné Digital?</string>
    <string name="delete_digital_card_message">Presiona Si para eliminar.</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="names">Nombres</string>
    <string name="surnames">Apellidos</string>
    <string name="phone_number">Número Telefónico</string>
    <string name="email">Correo Electrónico</string>
    <string name="send">Enviar</string>
    <string name="request_the_product">Solicitud del producto</string>
    <string name="button_request_the_product">Solicite el Producto</string>
    <string name="no_email_app">No cuenta con una aplicación de correo.</string>
    <string name="title_activity_insurance_america">InsuranceAmericaActivity</string>
    <string name="title_activity_request_the_product">RequestTheProductActivity</string>
    <string name="email_address">ventas@segurosamerica.com.ni</string>
    <string name="email_address_coordinates">americaasistencia@segurosamerica.com.ni</string>
    <string name="email_subject">Solicitud de Productos vía Android</string>
    <string name="email_subject_registros">Solicitud de Registro vía Android</string>
    <string name="email_subject_coordinates">America asistencia</string>
    <string name="message_coordinates" formatted="false">America Asistencia, mis coordenadas son Latitud: %s Longitud: %s</string>
    <string name="email_message" formatted="false">Nombres: %s\nApellidos: %s\nNúmero Telefónico: %s\nCorreo Electrónico: %s</string>
    <string name="title_activity_cars">CarsActivity</string>
    <string name="title_activity_health">HealthActivity</string>
    <string name="button_pro_health_golden">ProSalud Dorado</string>
    <string name="button_pro_health_silver">ProSalud Plateado</string>
    <string name="button_hospital_insurance">Seguro Hospitalario</string>
    <string name="button_police">Policía</string>
    <string name="button_firefighter">Bomberos</string>
    <string name="button_cruz_roja">Cruz Roja</string>
    <string name="domestic_suppliers">Proveedores Nacionales</string>
    <string name="internationals_suppliers">Proveedores Internacionales (QHM)</string>
    <string name="pharmacy">Farmacias</string>
    <string name="button_diagnostic_centers">Centros de Diagnóstico</string>
    <string name="number_pharmacy_five_text">Farmacia Santa Bárbara (León)</string>
    <string name="number_pharmacy_five_text_address">Mina Limon, Contiguo Panadería Auromar, B&#186; Arlen Siu</string>
    <string name="number_pharmacy_five">2316&#8211;1002</string>
    <string name="funerarias">Funerarias</string>
    <string name="descripcion_el_carmen">Funeraria El Carmen</string>
    <string name="funeraria_el_carmen">Funeraria y Cementerio El Carmen\nVilla Fontana Norte, de los semáforos de ENITEL de Villa Fontana 700mts al sur. Casa # 55\n2278&#8211;5633</string>
    <string name="descripcion_el_alba">Funeraria El Alba</string>
    <string name="funeraria_el_alba">Funeraria El Alba\nBo. El Paraisito, calle 14 de Septiembre de la P del H 1c arriba y 1c al lago.\n2249&#8211;3584</string>
    <string name="descripcion_la_catolica">Funeraria La Católica</string>
    <string name="funeraria_la_catolica">Funeraria La Católica y la Auxiliadora\nFte. al RUCFA, Managua\n2248&#8211;3282</string>
    <string name="descripcion_el_renazco">Funeraria El Reñazco</string>
    <string name="funeraria_el_renazco">Funeraria El Reñazco\nSemáforos de la Vicky 2c abajo, 1c al lago, 30vrs abajo # 46\n2270&#8211;5205</string>
    <string name="descripcion_monte_olivos">Funeraria Monte de los Olivos</string>
    <string name="funeraria_monte_olivos">Funeraria Monte de los Olivos\nHotel Princess 1c este, Av. Cardenal Miguel Obando, Los Robles, Managua, Nicaragua\n2278&#8211;0217 / 2278&#8211;4205 / 8590&#8211;9832 / 1&#8211;800&#8211;FUNERAL</string>
    <string name="descripcion_central_san_felipe">Funeraria Central San Felipe</string>
    <string name="funeraria_central_san_felipe">Funeraria Central San Felipe\nEstelí, del Almacen Sony &#189;c al sur\n2713&#8211;2430 / 8666&#8211;5390</string>
    <string name="departments_a">Departamentos</string>
    <string name="departments_b">Locales</string>
    <string name="departments_c">Boaco</string>
    <string name="departments_d">ProFamilia Boaco\nAve. Modesto Duarte en calle principal de Boaco Bajo.\n2542&#8211;2492</string>
    <string name="departments_e">Chinandega</string>
    <string name="departments_f">Amocsa (Asistencia Médica de Occidente)\nFerretería SINSA 2&#189; c. al Norte.\nChinandega\n2340&#8211;1852\n2340&#8211;1853\n2340&#8211;1854\n\nFrente al quiosko parque Central\nCorinto\n2342&#8211;2835\n\nTelcor 1/2c Sur\nChichigalpa\n2343&#8211;2608</string>
    <string name="departments_g">Hospital Ingenio San Antonio\nIngenio San Antonio, Chichigalpa\n2342&#8211;9120</string>
    <string name="departments_h">ProFamilia Chinandega\nHotel Glomar &#189; c. abajo\n2341&#8211;2824</string>
    <string name="departments_a_o">Laboratorios San Angel\n2341&#8211;8712 / 2341&#8211;0207\nEsquina de los Bancos &#189; al Sur.</string>
    <string name="departments_a_s">Laboratorio Clínico Altamirano\nGasolinera UNO Guadalupe 3c al sur 10 vrs al este.\n2340&#8211;4207 / 2340&#8211;2361 / 2310&#8211;3718</string>
    <string name="departments_i">Estelí</string>
    <string name="departments_j">ProFamilia Estelí\nEstelí &#8211; Ctra. Panamericana, entrada a la Chacara\n2713&#8211;7799</string>
    <string name="departments_k">Hospital Adventista de Nicaragua\nFrente al antiguo Hospital Alejandra Davila Bolaños (Calle Central de Esteli)\n2713&#8211;3827</string>
    <string name="departments_k_a">SERMESA - Policlínica Estelí\nKM 143 Carretera Estelí, Contiguo a Cotran sur.\n2713&#8211;6632</string>
    <string name="departments_a_b">Granada</string>
    <string name="departments_a_r">SERMESA\nKm 45 &#189; carretera Masaya&#8211;Granada\n2552&#8211;2907 / 2552&#8211;4092</string>
    <string name="departments_m">Jinotega</string>
    <string name="departments_n">ProFamilia Jinotega\nGasolinera TEXACO &#189;c. al Oeste\n2782&#8211;6750\n2782&#8211;2132</string>
    <string name="departments_l">Jinotepe</string>
    <string name="departments_o">Hosp. &#34;Antonio Román Matus&#34; In Memoriam\nKm. 48 &#189; Ctra. Sur, Jinotepe, Carazo\n2532&#8211;5160</string>
    <string name="departments_a_t">SERMESA\nBancentro 6c al sur, Bo. San Rafael\n2532&#8211;0458 / 2532&#8211;3677</string>
    <string name="departments_p">Juigalpa</string>
    <string name="departments_q">Centro Médico Juigalpa (CEMEQSA)\nBANCENTRO 1c. al Oeste.\n2512&#8211;1817</string>
    <string name="departments_r">ProFamilia Juigalpa\nDel Zoológico 1c. al Oeste\n2512&#8211;2918</string>
    <string name="departments_a_u">Farmacia Centro Medico Juigalpa\nBancentro, 1c. Al oeste\n2512&#8211;1193</string>
    <string name="departments_s">León</string>
    <string name="departments_t">AMOCSA\nEsquina de Los Bancos 175 vrs al este\n2311&#8211;1014</string>
    <string name="departments_u">SERMESA La Fraternidad\nPolicía Nacional 100 mts al Sur \n2311&#8211;2700\n2311&#8211;5294</string>
    <string name="departments_v">Filial San Jose\nIglesia San Jose 1c al Norte 25 vrs arriba\n2311&#8211;5204</string>
    <string name="departments_v_a">Laboratorio Galo\nCostado Este del Parque La Merced, 2 &#189; c. al Norte\n2311&#8211;3626 / 2311&#8211;0845</string>
    <string name="departments_v_b">Clinica Oftalmológica Valdivia\nMarroquín Costado Noroeste Parque San Juan 75 vrs al norte.\n2315&#8211;2155</string>
    <string name="departments_w">Masaya</string>
    <string name="departments_y">ProFamilia Masaya\nFrente a Entrada de El Coyotepe.\n2522&#8211;4777</string>
    <string name="departments_z">Clinica Sta. Gema\nDe las oficinas centrales del BAC &#189; c al este &#189; c al norte.\n2522&#8211;0052</string>
    <string name="departments_a_w">SERMESA\nReparto Los Chilamates km 28 &#189; ctra a Granada.\n2522&#8211;4033 / 2522&#8211;1069</string>
    <string name="departments_a_a">Matagalpa</string>
    <string name="departments_a_c">ProFamilia Matagalpa\nCostado Este Colegio Santa Teresita.\n2772&#8211;3463</string>
    <string name="departments_a_d">Profamilia Río Blanco\nPolicía 3c. al Sur, 1c. al Este, donde fue el Babana.\n2778&#8211;0244</string>
    <string name="departments_a_p">Clínica Santa Fe\nMatagalpa, Semáforos de Salomón López 2c &#189; al Este.\n2772&#8211;5113</string>
    <string name="departments_a_r_a">Clínica Santa Fe Sucursal Río Blanco\nDe la Alcaldía 2 cuadras al este.\n2778&#8211;0439</string>
    <string name="departments_a_x">Clínica Santa Fe - Sébaco\nSébaco, contiguo a Comunidad Indígena\n2775&#8211;3769</string>
    <string name="departments_a_e">Ocotal</string>
    <string name="departments_a_f">ProFamilia Ocotal\nCalle Central, Instituto Nac. Segovia 1 &#189; c al Sur\n2732&#8211;2983</string>
    <string name="departments_a_g">ProFamilia Somoto\nHotel Bambú 1c. al Sur.\n2722&#8211;2753</string>
    <string name="departments_a_i">Rivas</string>
    <string name="departments_a_j">ProFamilia Rivas\nGasolinera PUMA, San Jorge 200 mts al norte\n2563&#8211;4120</string>
    <string name="departments_a_m">Bluefields</string>
    <string name="departments_a_n">Clínica Harold Bacon\nBarrio Central Contiguo a Bancentro.\n2572&#8211;2384</string>
    <string name="departments_a_n_a">Clínica San Sebastian\nBo. Pancasan, de la escuela Monseñor Shäffer &#189;c al este.\n2572&#8211;1960, 257</string>
</resources>